--- a/files/wetcig.css
+++ b/files/wetcig.css
@@ -14,6 +14,9 @@
 	box-sizing:border-box;
 }
 
+a {
+	color:#0084EC;
+}
 
 /* Page Settings */
 html {
@@ -87,7 +90,7 @@ header h1 {
 	padding:0px;
 }
 header h2 {
-	color:#0084EC;
+	v
 	font-size:36px;
 	margin:6px;
 	padding:0px;
